--- a/src/HuntAndPeck/Views/OptionsView.xaml
+++ b/src/HuntAndPeck/Views/OptionsView.xaml
@@ -1,6 +1,7 @@
 ﻿<Window x:Class="HuntAndPeck.Views.OptionsView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:behaviors="clr-namespace:HuntAndPeck.Behaviors"
         Title="OptionsView" Height="300" Width="400"
         WindowStartupLocation="CenterScreen">
     <TabControl TabStripPlacement="Left">
@@ -20,22 +21,25 @@
                     <StackPanel Orientation="Horizontal" Margin="0,2,0,8">
                         <Label Width="120" VerticalAlignment="Center">Overlay HotKey:</Label>
                         <TextBox Width="200"
-                                 Text="{Binding HotKeyText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                 behaviors:HotKeyCaptureBehavior.IsEnabled="True"
+                                 behaviors:HotKeyCaptureBehavior.HotKeyText="{Binding HotKeyText, Mode=TwoWay}"
                                  ToolTip="Format: Modifier+Key e.g. 'Alt+comma'"/>
                     </StackPanel>
 
                     <StackPanel Orientation="Horizontal" Margin="0,2,0,8">
                         <Label Width="120" VerticalAlignment="Center">Taskbar HotKey:</Label>
                         <TextBox Width="200"
-                                 Text="{Binding TaskbarHotKeyText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                 behaviors:HotKeyCaptureBehavior.IsEnabled="True"
+                                 behaviors:HotKeyCaptureBehavior.HotKeyText="{Binding TaskbarHotKeyText, Mode=TwoWay}"
                                  ToolTip="Format: Modifier+Key e.g. 'Alt+Shift+comma'"/>
                     </StackPanel>
 
                     <StackPanel Orientation="Horizontal" Margin="0,2,0,0">
                         <Label Width="120" VerticalAlignment="Center">Debug HotKey:</Label>
                         <TextBox Width="200"
-                                 Text="{Binding DebugHotKeyText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                 ToolTip="Format: Modifier+Key e.g. 'Control+Shift+comma'"/>
+                                 behaviors:HotKeyCaptureBehavior.IsEnabled="True"
+                                 behaviors:HotKeyCaptureBehavior.HotKeyText="{Binding DebugHotKeyText, Mode=TwoWay}"
+                                 ToolTip="Format: Modifier+Key e.g. 'Control+Shift+comma'" Cursor=""/>
                     </StackPanel>
                 </StackPanel>
             </TabItem.Content>
